Finish all spacing issues, except within the accordion.

--- a/css/outer/jobs/jobs.less
+++ b/css/outer/jobs/jobs.less
@@ -1,7 +1,14 @@
 #jobs-page #title, #jobs-page #content {
 	font: 15px/24px 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
-	color: #333;
+  h1, h2, h3, h4, h5, h6, p, ul, li, dd, dt {
+	  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  }
+  h1, h2, h3, h4, h5, h6, p, ul {
+    margin: 0 0 15px;
+  }
 	background: white;
+	color: #333;
+
   counter-reset: my-counter;
 
   .step {
@@ -164,6 +171,9 @@
   }
 
   .jobs .point {
+    h3 {
+      margin-top: 15px;
+    }
 	  position: relative;
   }
 
@@ -201,6 +211,10 @@
     border-top: 0px;
   }
 
+  #accordion-who {
+    padding-top: 15px;
+  }
+
   .accordion-heading {
 	  font-size: 1.1em;
 	  text-transform: uppercase;
@@ -235,6 +249,10 @@
 	//   border: none;
   // }
 
+  .accordion-group:last-child {
+	  border: none;
+  }
+
 
   // .accordion li {
 	//   float: none;
@@ -247,19 +265,10 @@
 	//   padding: 5px 0 20px 0;
   // }
 
-  // input[type=checkbox]:checked ~ h3 label:before {
-  //   border-left: 5px solid transparent;
-  //   border-top: 5px solid black;
-  //   border-right: 5px solid transparent;
-  //   margin-left: -4px;
-  //   margin-top: -4px
-  // }
-
-  // input[type=checkbox]:checked ~ ul {
-	//   min-height: 300px;
-	//   max-height: 700px;
-  // }
-
+  #final {
+    // hack, I don't know why this space isn't appearing
+    padding-top: 15px;
+  }
 
   /* Media queries */
 
